<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nordis.android.checklist.SubcribeDetailsActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView52"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="20sp"
            android:text="@string/SubscribtionDetailsText0" />

        <TextView
            android:id="@+id/textView51"
            android:layout_marginTop="20dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SubscribtionDetailsText" />

        <TextView
            android:id="@+id/textView50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="20sp"
            android:text="@string/SubscribtionDetailsText1" />

        <TextView
            android:id="@+id/textView49"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="20sp"
            android:text="@string/SubscribtionDetailsText2" />

        <TextView
            android:id="@+id/textView48"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="20sp"
            android:text="@string/SubscribtionDetailsText3" />

        <TextView
            android:id="@+id/textView47"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="20sp"
            android:text="@string/SubscribtionDetailsText4" />

    </LinearLayout>
</ScrollView>
