<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nordis.android.checklist.UserGuideActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ID_ConstraintManual1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.998"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.998">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="5."
            android:textSize="20sp"
            app:autoSizeMaxTextSize="25sp"
            app:autoSizeMinTextSize="15sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintTop_toTopOf="@+id/textView6"
            app:layout_constraintWidth_percent="0.06" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:text="@string/backarrow"
            android:textSize="14sp"
            app:autoSizeMaxTextSize="15sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintWidth_percent="0.75" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/recomendation"
            android:textSize="20sp"
            app:autoSizeMaxTextSize="25sp"
            app:autoSizeMinTextSize="15sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/textView16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier"
            app:layout_constraintWidth_percent="0.75" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/string_lengh_limit_90"
            android:textSize="14sp"
            app:autoSizeMaxTextSize="15sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15"
            app:layout_constraintWidth_percent="0.9" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:text="@string/check_new_position"
            android:textSize="14sp"
            app:autoSizeMaxTextSize="15sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintWidth_percent="0.75" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:text="@string/easy_search_word"
            android:textSize="14sp"
            app:autoSizeMaxTextSize="15sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.09"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintWidth_percent="0.75" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:text="@string/context_menu_options"
            android:textSize="14sp"
            app:autoSizeMaxTextSize="15sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintWidth_percent="0.75" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:text="@string/possibility_delete_with_rest"
            android:textSize="14sp"
            app:autoSizeMaxTextSize="15sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/textView24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.09"
            app:layout_constraintHorizontal_bias="0.62"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintWidth_percent="0.8" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:text="@string/HowtoaplusBallance"
            android:textSize="14sp"
            app:autoSizeMaxTextSize="15sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@id/barrier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.09"
            app:layout_constraintHorizontal_bias="0.626"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintWidth_percent="0.8" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/manual"
            android:textSize="20sp"
            app:autoSizeMaxTextSize="25sp"
            app:autoSizeMinTextSize="15sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.09"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.85" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="7dp"
            android:gravity="center"
            android:text="1."
            android:textSize="20sp"
            app:autoSizeMaxTextSize="25sp"
            app:autoSizeMinTextSize="15sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            app:layout_constraintWidth_percent="0.06" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="7dp"
            android:gravity="center"
            android:text="6."
            android:textSize="20sp"
            app:autoSizeMaxTextSize="25sp"
            app:autoSizeMinTextSize="15sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toStartOf="@+id/textView10"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintTop_toTopOf="@+id/textView10"
            app:layout_constraintWidth_percent="0.06" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:layout_marginEnd="7dp"
            android:text="7."
            android:textSize="20sp"
            app:autoSizeMaxTextSize="25sp"
            app:autoSizeMinTextSize="15sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintRight_toLeftOf="@id/textView24"
            app:layout_constraintTop_toTopOf="@id/textView24"
            app:layout_constraintWidth_percent="0.06" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="7dp"
            android:gravity="center"
            android:text="4."
            android:textSize="20sp"
            app:autoSizeMaxTextSize="25sp"
            app:autoSizeMinTextSize="15sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toStartOf="@+id/textView9"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintTop_toTopOf="@+id/textView9"
            app:layout_constraintWidth_percent="0.06" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="7dp"
            android:gravity="center"
            android:text="3."
            android:textSize="20sp"
            app:autoSizeMaxTextSize="25sp"
            app:autoSizeMinTextSize="15sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toStartOf="@+id/textView8"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintTop_toTopOf="@+id/textView8"
            app:layout_constraintWidth_percent="0.06" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="7dp"
            android:gravity="center"
            android:text="2."
            android:textSize="20sp"
            app:autoSizeMaxTextSize="25sp"
            app:autoSizeMinTextSize="15sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toStartOf="@+id/textView7"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            app:layout_constraintWidth_percent="0.06" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:text="@string/one"
            android:textSize="14sp"
            app:autoSizeMaxTextSize="15sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintWidth_percent="0.75" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="textView15,textView16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.015"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="632dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>